[Header] Create transparent collapsable border and fix JS.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -21,6 +21,10 @@ body {
   width: auto;
 }
 
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+  border-color: transparent;
+}
+
 #collapse-btn {
   border-style: solid;
   border-width: 3px;
